--- a/html/balls/result.html
+++ b/html/balls/result.html
@@ -214,6 +214,11 @@
                     document.write(dt);
                 </script>
             </span>
+            <div class="threeCircle">
+                <button></button>
+                <button></button>
+                <button></button>
+            </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
                 <marquee behavior="" direction="">跑馬燈跑馬燈跑馬燈跑馬燈跑馬燈跑馬燈跑馬燈跑馬燈跑馬燈</marquee>
@@ -2661,7 +2666,7 @@
                     <ul>
                         <li>03:35 單式 足球-讓分<button></button><span class="onWait">等待中...</span></li>
                         <li>03:35 單式 足球-讓分<button></button><span>成功</span></li>
-                        <li>03:35 單式 足球-讓分<button></button><span>失敗</span></li>
+                        <li>03:35 單式 足球-讓分<button></button><span class="fail">失敗</span></li>
                     </ul>
                 </div>
                 <!--直播小框-->
@@ -2877,22 +2882,8 @@
                             <tr>
                                 <td class="listName" colspan="2">布咸美恩斯 1905[主]<span class="vs">vs</span>布拉格斯拉維亞 B @ <span class="odds">4.5</span></td>
                             </tr>
-                        </table>
-                        <table class="bettingBoard">
                             <tr>
-                                <td>2021/03/03 14:30:08</td>
-                                <td class="waiting">等待中...</td>
-                            </tr>
-                            <tr>
-                                <td>M58755837</td>
-                                <td>單式 足球-獨贏</td>
-                            </tr>
-                            <tr>
-                                <td>投注 : 100</td>
-                                <td>可贏 : 450</td>
-                            </tr>
-                            <tr>
-                                <td class="listName" colspan="2">布咸美恩斯 1905[主]<span class="vs">vs</span>布拉格斯拉維亞 B @ <span class="odds">4.5</span></td>
+                                <td class="failRemind">下注失敗，此單無效</td>
                             </tr>
                         </table>
                         <table class="bettingBoard">
@@ -2910,6 +2901,29 @@
                             </tr>
                             <tr>
                                 <td class="listName" colspan="2">布咸美恩斯 1905[主]<span class="vs">vs</span>布拉格斯拉維亞 B @ <span class="odds">4.5</span></td>
+                            </tr>
+                            <tr>
+                                <td class="failRemind">下注失敗，此單無效</td>
+                            </tr>
+                        </table>
+                        <table class="bettingBoard">
+                            <tr>
+                                <td>2021/03/03 14:30:08</td>
+                                <td class="waiting">等待中...</td>
+                            </tr>
+                            <tr>
+                                <td>M58755837</td>
+                                <td>單式 足球-獨贏</td>
+                            </tr>
+                            <tr>
+                                <td>投注 : 100</td>
+                                <td>可贏 : 450</td>
+                            </tr>
+                            <tr>
+                                <td class="listName" colspan="2">布咸美恩斯 1905[主]<span class="vs">vs</span>布拉格斯拉維亞 B @ <span class="odds">4.5</span></td>
+                            </tr>
+                            <tr>
+                                <td class="failRemind">下注失敗，此單無效</td>
                             </tr>
                         </table>
                     </div>
