--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>賽事比分</title>
+    <title>比分</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/javascript.js"></script>
     <link rel="stylesheet" href="css/style.css">
@@ -270,7 +270,7 @@
                 <li class="cantUse"><a href="javascript:;">直播</a></li>
                 <li class="cantUse"><a href="javascript:;">比賽結果</a></li>
                 <li class="cantUse"><a href="javascript:;">盤口教程</a></li>
-                <li><a href="../../index.html" class="active">賽事比分</a></li>
+                <li><a href="../../index.html" class="active">比分</a></li>
                 <li class="cantUse"><a href="javascript:;"><i class="fas fa-user"></i></i>我的</a></li>
             </ul>
             <!--登入前樣式-->
@@ -480,7 +480,7 @@
                     </li>
                 </ul>
             </section>
-            <!--賽事比分-->
+            <!--比分-->
             <section class="middle">
                 <!--遊戲版面-->
                 <div class="mainBox display">
