--- a/html/balls/football.html
+++ b/html/balls/football.html
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="innerBox1">
-            <p>通知設定</p>
+            <p>通知設定<span>*開啟通知，可隨時掌握最新賽事比分</span></p>
             <div class="baseline"></div>
             <div class="partingBox">
                 桌面通知
@@ -182,7 +182,7 @@
             </div>
         </div>
         <div class="innerBox1">
-            <p>籌碼快捷設定</p>
+            <p>籌碼快捷設定<span>*可設定5組下注金額</span></p>
             <div class="baseline"></div>
             <div class="longBox">
                 <span>設定下注</span>
