--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="innerBox1">
-            <p>通知設定<span>*開啟通知，可隨時掌握最新賽事比分</span></p>
+            <p>通知設定<span>*開啟p p通知，可隨時掌握最新賽事比分</span></p>
             <div class="baseline"></div>
             <div class="partingBox">
                 桌面通知
@@ -3654,35 +3654,35 @@
             <div class="chleague index">
                 <ul>
                     <li>
-                        <p><span class="cube active"></span>選取/取消所有聯盟</p>
-                        <p><span class="cube active"></span>足球</p>
-                        <p><span class="cube active"></span>股票指數</p>
-                        <p><span class="cube active"></span>排球</p>
-                        <p><span class="cube active"></span>乒乓球</p>
+                        <p><span class="cube2 active"></span>選取/取消所有聯盟</p>
+                        <p><span class="cube2 active"></span>足球</p>
+                        <p><span class="cube2 active"></span>股票指數</p>
+                        <p><span class="cube2 active"></span>排球</p>
+                        <p><span class="cube2 active"></span>乒乓球</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube active"></span>棒球</p>
-                        <p><span class="cube active"></span>彩球</p>
-                        <p><span class="cube active"></span>賽車</p>
+                        <p><span class="cube2 active"></span>棒球</p>
+                        <p><span class="cube2 active"></span>彩球</p>
+                        <p><span class="cube2 active"></span>賽車</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube active"></span>籃球</p>
-                        <p><span class="cube active"></span>冰球</p>
-                        <p><span class="cube active"></span>羽毛球</p>
+                        <p><span class="cube2 active"></span>籃球</p>
+                        <p><span class="cube2 active"></span>冰球</p>
+                        <p><span class="cube2 active"></span>羽毛球</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube active"></span>賽馬賽狗</p>
-                        <p><span class="cube active"></span>網球</p>
-                        <p><span class="cube active"></span>沙灘足球</p>
+                        <p><span class="cube2 active"></span>賽馬賽狗</p>
+                        <p><span class="cube2 active"></span>網球</p>
+                        <p><span class="cube2 active"></span>沙灘足球</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube active"></span>電競</p>
-                        <p><span class="cube active"></span>斯諾克</p>
-                        <p><span class="cube active"></span>美式足球</p>
+                        <p><span class="cube2 active"></span>電競</p>
+                        <p><span class="cube2 active"></span>斯諾克</p>
+                        <p><span class="cube2 active"></span>美式足球</p>
                     </li>
                 </ul>
                 <button>確認</button>
