--- a/html/balls/result.html
+++ b/html/balls/result.html
@@ -2605,55 +2605,55 @@
             <div class="chleague">
                 <ul>
                     <li>
-                        <p><span class="cube2 active"></span>選取/取消所有聯盟</p>
-                        <p><span class="cube2 active"></span>英格蘭足總杯</p>
-                        <p><span class="cube2 active"></span>巴林超級聯賽</p>
-                        <p><span class="cube2 active"></span>巴西巴西利亞甲組聯賽</p>
-                        <p><span class="cube2 active"></span>比利時盃</p>
-                        <p><span class="cube2 active"></span>克羅地亞盃</p>
-                        <p><span class="cube2 active"></span>超級盃(在卡塔爾)</p>
-                        <p><span class="cube2 active"></span>摩洛哥甲組聯賽</p>
-                        <p><span class="cube2 active"></span>南非盃</p>
-                        <p><span class="cube2 active"></span>塞浦路斯甲組聯賽</p>
-                        <p><span class="cube2 active"></span>土耳其盃</p>
-                        <p><span class="cube2 active"></span>希臘盃</p>
-                        <p><span class="cube2 active"></span>以色列超級聯賽</p>
-                        <p><span class="cube2 active"></span>印度超級聯賽</p>
-                        <p><span class="cube2 active"></span>義大利青年盃U19</p>
+                        <p><span class="cube active"></span>選取/取消所有聯盟</p>
+                        <p><span class="cube active"></span>英格蘭足總杯</p>
+                        <p><span class="cube active"></span>巴林超級聯賽</p>
+                        <p><span class="cube active"></span>巴西巴西利亞甲組聯賽</p>
+                        <p><span class="cube active"></span>比利時盃</p>
+                        <p><span class="cube active"></span>克羅地亞盃</p>
+                        <p><span class="cube active"></span>超級盃(在卡塔爾)</p>
+                        <p><span class="cube active"></span>摩洛哥甲組聯賽</p>
+                        <p><span class="cube active"></span>南非盃</p>
+                        <p><span class="cube active"></span>塞浦路斯甲組聯賽</p>
+                        <p><span class="cube active"></span>土耳其盃</p>
+                        <p><span class="cube active"></span>希臘盃</p>
+                        <p><span class="cube active"></span>以色列超級聯賽</p>
+                        <p><span class="cube active"></span>印度超級聯賽</p>
+                        <p><span class="cube active"></span>義大利青年盃U19</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube2 active"></span>義大利甲組聯賽</p>
-                        <p><span class="cube2 active"></span>埃及超級聯賽</p>
-                        <p><span class="cube2 active"></span>巴西盃</p>
-                        <p><span class="cube2 active"></span>巴西巴亞諾甲組聯賽</p>
-                        <p><span class="cube2 active"></span>德國足協盃</p>
-                        <p><span class="cube2 active"></span>卡塔爾埃米爾盃</p>
-                        <p><span class="cube2 active"></span>南美洲球會盃</p>
-                        <p><span class="cube2 active"></span>奇幻賽事</p>
-                        <p><span class="cube2 active"></span>沙特超級聯賽</p>
-                        <p><span class="cube2 active"></span>突尼斯甲組聯賽</p>
-                        <p><span class="cube2 active"></span>西班牙盃</p>
-                        <p><span class="cube2 active"></span>以色列北部國家聯賽U19</p>
-                        <p><span class="cube2 active"></span>印度I聯賽</p>
-                        <p><span class="cube2 active"></span>英格蘭足球協會南部全國聯賽</p>
+                        <p><span class="cube active"></span>義大利甲組聯賽</p>
+                        <p><span class="cube active"></span>埃及超級聯賽</p>
+                        <p><span class="cube active"></span>巴西盃</p>
+                        <p><span class="cube active"></span>巴西巴亞諾甲組聯賽</p>
+                        <p><span class="cube active"></span>德國足協盃</p>
+                        <p><span class="cube active"></span>卡塔爾埃米爾盃</p>
+                        <p><span class="cube active"></span>南美洲球會盃</p>
+                        <p><span class="cube active"></span>奇幻賽事</p>
+                        <p><span class="cube active"></span>沙特超級聯賽</p>
+                        <p><span class="cube active"></span>突尼斯甲組聯賽</p>
+                        <p><span class="cube active"></span>西班牙盃</p>
+                        <p><span class="cube active"></span>以色列北部國家聯賽U19</p>
+                        <p><span class="cube active"></span>印度I聯賽</p>
+                        <p><span class="cube active"></span>英格蘭足球協會南部全國聯賽</p>
                     </li>
                     <li>
                         <p>&ensp;</p>
-                        <p><span class="cube2 active"></span>法國甲組聯賽</p>
-                        <p><span class="cube2 active"></span>阿爾及利亞甲組聯賽</p>
-                        <p><span class="cube2 active"></span>巴西里約州甲組聯賽</p>
-                        <p><span class="cube2 active"></span>巴西伯南布哥甲組-聯賽</p>
-                        <p><span class="cube2 active"></span>法國甲組聯賽-特別投注</p>
-                        <p><span class="cube2 active"></span>墨西哥超級聯賽</p>
-                        <p><span class="cube2 active"></span>南美自由盃</p>
-                        <p><span class="cube2 active"></span>塞浦路斯盃</p>
-                        <p><span class="cube2 active"></span>英格蘭超級聯賽</p>
-                        <p><span class="cube2 active"></span>匈牙利甲組聯賽</p>
-                        <p><span class="cube2 active"></span>亞洲足聯盃外圍賽-附加賽</p>
-                        <p><span class="cube2 active"></span>伊朗超級聯賽</p>
-                        <p><span class="cube2 active"></span>印度果阿超級聯賽</p>
-                        <p><span class="cube2 active"></span>英格蘭伊斯米安超級聯賽</p>
+                        <p><span class="cube active"></span>法國甲組聯賽</p>
+                        <p><span class="cube active"></span>阿爾及利亞甲組聯賽</p>
+                        <p><span class="cube active"></span>巴西里約州甲組聯賽</p>
+                        <p><span class="cube active"></span>巴西伯南布哥甲組-聯賽</p>
+                        <p><span class="cube active"></span>法國甲組聯賽-特別投注</p>
+                        <p><span class="cube active"></span>墨西哥超級聯賽</p>
+                        <p><span class="cube active"></span>南美自由盃</p>
+                        <p><span class="cube active"></span>塞浦路斯盃</p>
+                        <p><span class="cube active"></span>英格蘭超級聯賽</p>
+                        <p><span class="cube active"></span>匈牙利甲組聯賽</p>
+                        <p><span class="cube active"></span>亞洲足聯盃外圍賽-附加賽</p>
+                        <p><span class="cube active"></span>伊朗超級聯賽</p>
+                        <p><span class="cube active"></span>印度果阿超級聯賽</p>
+                        <p><span class="cube active"></span>英格蘭伊斯米安超級聯賽</p>
                     </li>
                 </ul>
                 <button>確認</button>
