--- a/html/leftbtn/deposit.html
+++ b/html/leftbtn/deposit.html
@@ -481,12 +481,14 @@
                         </tr>
                         <tr>
                             <td>
-                                <select name="" id="" class="chbank">
-                                    <option value="">中國銀行</option>
-                                    <option value="">日本銀行</option>
-                                    <option value="">泰國銀行</option>
-                                    <option value="">印度銀行</option>
-                                </select>
+                                <label>
+                                    <select name="" id="" class="chbank">
+                                        <option value="">中國銀行</option>
+                                        <option value="">日本銀行</option>
+                                        <option value="">泰國銀行</option>
+                                        <option value="">印度銀行</option>
+                                    </select>
+                                </label>
                             </td>
                         </tr>
                     </table>
@@ -500,12 +502,14 @@
                                 <div class="half">
                                     <div class="inputBox">
                                         <span>收款銀行</span>
-                                        <select name="" id="">
-                                            <option value="">中國銀行</option>
-                                            <option value="">日本銀行</option>
-                                            <option value="">泰國銀行</option>
-                                            <option value="">印度銀行</option>
-                                        </select>
+                                        <label>
+                                            <select name="" id="">
+                                                <option value="">中國銀行</option>
+                                                <option value="">日本銀行</option>
+                                                <option value="">泰國銀行</option>
+                                                <option value="">印度銀行</option>
+                                            </select>
+                                        </label>
                                         <button>複製</button>
                                     </div>
                                     <div class="inputBox">
@@ -515,12 +519,14 @@
                                     </div>
                                     <div class="inputBox">
                                         <span>換款方式</span>
-                                        <select name="" id="">
-                                            <option value="">網路轉帳</option>
-                                            <option value="">網路轉帳</option>
-                                            <option value="">網路轉帳</option>
-                                            <option value="">網路轉帳</option>
-                                        </select>
+                                        <label>
+                                            <select name="" id="">
+                                                <option value="">網路轉帳</option>
+                                                <option value="">網路轉帳</option>
+                                                <option value="">網路轉帳</option>
+                                                <option value="">網路轉帳</option>
+                                            </select>
+                                        </label>
                                         <button>複製</button>
                                     </div>
                                 </div>
@@ -528,12 +534,14 @@
                                 <div class="half">
                                     <div class="inputBox">
                                         <span>支行</span>
-                                        <select name="" id="">
-                                            <option value="">中國銀行</option>
-                                            <option value="">日本銀行</option>
-                                            <option value="">泰國銀行</option>
-                                            <option value="">印度銀行</option>
-                                        </select>
+                                        <label>
+                                            <select name="" id="">
+                                                <option value="">中國銀行</option>
+                                                <option value="">日本銀行</option>
+                                                <option value="">泰國銀行</option>
+                                                <option value="">印度銀行</option>
+                                            </select>
+                                        </label>
                                         <button>複製</button>
                                     </div>
                                     <div class="inputBox">
