--- a/html/leftbtn/transpoint.html
+++ b/html/leftbtn/transpoint.html
@@ -304,7 +304,7 @@
                     <!--頭像區-->
                     <div class="avater">
                         <div class="sticker"></div>
-                        <p>user545<span>0</span></p>
+                        <p>user545<span>VIP0</span></p>
                         <p class="joinday">加入第6天</p>
                     </div>
                     <!--三按鈕-->
@@ -482,17 +482,21 @@
                         <tr>
                             <td>
                                 <div class="inputBox">
-                                    <select name="" id="">
-                                        <option value="">中心錢包</option>
-                                        <option value=""></option>
-                                        <option value=""></option>
-                                    </select>
+                                    <label for="">
+                                        <select name="" id="">
+                                            <option value="">中心錢包</option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                        </select>
+                                    </label>
                                     <div class="arrow"></div>
-                                    <select name="" id="">
-                                        <option value="">OO體育</option>
-                                        <option value=""></option>
-                                        <option value=""></option>
-                                    </select>
+                                    <label for="">
+                                        <select name="" id="">
+                                            <option value="">OO體育</option>
+                                            <option value=""></option>
+                                            <option value=""></option>
+                                        </select>
+                                    </label>
                                 </div>
                             </td>
                         </tr>
