--- a/html/myself/control.html
+++ b/html/myself/control.html
@@ -303,7 +303,7 @@
                     <!--頭像區-->
                     <div class="avater">
                         <div class="sticker"></div>
-                        <p>user545<span>0</span></p>
+                        <p>user545<span>VIP0</span></p>
                         <p class="joinday">加入第6天</p>
                     </div>
                     <!--三按鈕-->
