--- a/html/myself/betting_record.html
+++ b/html/myself/betting_record.html
@@ -724,18 +724,22 @@
                 <div class="fixbar">
                     <div class="timeSearch">
                         <button class="date"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-25</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label>
+                            <select name="" id="">
+                                <option value="">2020-05-25</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <span>-</span>
                         <button class="date"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-31</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label>
+                            <select name="" id="">
+                                <option value="">2020-05-31</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <button class="timesearchbut">查詢</button>
                     </div>
                     <button class="smallTimeBtn">本月</button>
