--- a/html/myself/deal_record.html
+++ b/html/myself/deal_record.html
@@ -491,7 +491,7 @@
                         </tr>
                     </table>
                     <!--明細總覽_取款-->
-                    <table class="minetable dealRecord withdrawl">
+                    <table class="minetable dealRecord withdrawl2">
                         <tr>
                             <td>2020-05-30<span class="time">16:26:07</span></td>
                             <td class="dealCode">5678</td>
@@ -553,25 +553,27 @@
                 <div class="fixbar">
                     <ul>
                         <li class="active depositBtn">存款</li>
-                        <div class="line"></div>
                         <li class="transferBtn">轉點</li>
-                        <div class="line"></div>
                         <li class="withdrawlBtn">取款</li>
                     </ul>
                     <div class="timeSearch deal">
                         <button class="date"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-25</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label>
+                            <select name="" id="">
+                                <option value="">2020-05-25</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <span>-</span>
                         <button class="date ld"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-31</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label>
+                            <select name="" id="">
+                                <option value="">2020-05-31</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <button class="timesearchbut">查詢</button>
                     </div>
                 </div>
