--- a/html/myself/contact.html
+++ b/html/myself/contact.html
@@ -475,11 +475,13 @@
                                 <td>
                                     <div class="inputBox">
                                         <span>問題類型</span>
-                                        <select name="" id="">
-                                            <option value="">請選擇問題類型</option>
-                                            <option value=""></option>
-                                            <option value=""></option>
-                                        </select>
+                                        <label for="">
+                                            <select name="" id="">
+                                                <option value="">請選擇問題類型</option>
+                                                <option value=""></option>
+                                                <option value=""></option>
+                                            </select>
+                                        </label>
                                     </div>
                                     <div class="line"></div>
                                 </td>
@@ -594,18 +596,22 @@
                     </ul>
                     <div class="timeSearch deal">
                         <button class="date"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-25</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label for="">
+                            <select name="" id="">
+                                <option value="">2020-05-25</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <span>-</span>
                         <button class="date"></button>
-                        <select name="" id="">
-                            <option value="">2020-05-31</option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </select>
+                        <label for="">
+                            <select name="" id="">
+                                <option value="">2020-05-31</option>
+                                <option value=""></option>
+                                <option value=""></option>
+                            </select>
+                        </label>
                         <button class="timesearchbut">查詢</button>
                     </div>
                 </div>
