--- a/html/myself/deal_record.html
+++ b/html/myself/deal_record.html
@@ -553,7 +553,9 @@
                 <div class="fixbar">
                     <ul>
                         <li class="active depositBtn">存款</li>
+                        <div class="line"></div>
                         <li class="transferBtn">轉點</li>
+                        <div class="line"></div>
                         <li class="withdrawlBtn">取款</li>
                     </ul>
                     <div class="timeSearch deal">
