--- a/html/myself/message.html
+++ b/html/myself/message.html
@@ -392,7 +392,9 @@
                     <div class="notice display">
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>NBA 》 11點整NBA直播賽</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
@@ -402,7 +404,9 @@
                         </div>
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>NBA 》 補進第4人籃網再簽甜瓜好友</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
@@ -415,7 +419,9 @@
                         </div>
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>NBA 》 第2隔離賽區?&ensp;柯瑞率先喊不打</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
@@ -425,7 +431,9 @@
                         </div>
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>足球 》 MLS回歸嚴肅響應示威&ensp;球隊又爆染疫 複賽再減一隊</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
@@ -435,7 +443,9 @@
                         </div>
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>北市大足球 》 國體江信隆超級噴射自由球&ensp;直奔球門死角</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
@@ -445,7 +455,9 @@
                         </div>
                         <div>
                             <div class="helpbar">
-                                <input type="radio">
+                                <label for="">
+                                    <input type="radio">
+                                </label>
                                 <p>中華職棒 》 M1封王彩帶拋不下來&ensp;中信等不及了</p>
                                 <span>2020-07-13&ensp;20:40</span>
                             </div>
